log
Thu 04 May 2023 02:37:31 AM UTC: 
 tests:  0|5
total_score: 0/70
e2f14b2
Thu 04 May 2023 02:46:55 AM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  2|4
total_score: 15/70
71d7791
Thu 04 May 2023 02:58:38 AM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:9: error: unused variable ‘sub’ [-Werror=unused-variable]
   50 |     int sub[10] = {0};
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
d6d98c9
Thu 04 May 2023 02:58:46 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0f1d9b4
Thu 04 May 2023 03:03:29 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
9bb14ec
Thu 04 May 2023 03:09:31 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
4c31b95
Thu 04 May 2023 03:14:26 AM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f1c56bc
Thu 04 May 2023 03:18:17 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
3aeb724
Thu 04 May 2023 03:32:11 AM UTC: 
 sudoku.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:71:31: error: ‘k’ undeclared (first use in this function)
   71 |       if (i == 1 || i == 4 || k == 7) {
      |                               ^
sudoku.c:71:31: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8756935
Thu 04 May 2023 03:32:21 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
fd62137
Thu 04 May 2023 03:33:35 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
4c44bfe
Thu 04 May 2023 03:35:09 AM UTC: 
 sudoku.c | 24 ++++++++++++------------
 1 file changed, 12 insertions(+), 12 deletions(-)
In file included from test.c:5:
sudoku.c:85:3: error: expected identifier or ‘(’ before ‘return’
   85 |   return 1;
      |   ^~~~~~
sudoku.c:86:1: error: expected identifier or ‘(’ before ‘}’ token
   86 | }
      | ^
sudoku.c: In function ‘is_valid’:
sudoku.c:84:3: error: control reaches end of non-void function [-Werror=return-type]
   84 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
fcf663f
Thu 04 May 2023 03:35:54 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
6178ce9
Thu 04 May 2023 03:36:25 AM UTC: 
 sudoku.c | 26 +++++++++++++-------------
 1 file changed, 13 insertions(+), 13 deletions(-)
 tests:  5|3
total_score: 35/70
a7ecd56
Thu 04 May 2023 03:44:00 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|3
total_score: 35/70
0f515dd
Thu 04 May 2023 03:46:37 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
43987c7
Thu 04 May 2023 03:50:35 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
0506972
Thu 04 May 2023 03:53:30 AM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  7|1
total_score: 55/70
d79de62
Thu 04 May 2023 04:04:01 AM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:124:9: error: void value not ignored as it ought to be
  124 |     aux = pop(pila);
      |         ^
sudoku.c:129:15: error: invalid use of incomplete typedef ‘List’
  129 |     while (adj->current) {
      |               ^~
sudoku.c:130:21: error: invalid use of incomplete typedef ‘List’
  130 |       push(pila, adj->current);
      |                     ^~
Compilation failed
f431764
Thu 04 May 2023 04:07:04 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:130:15: error: invalid use of incomplete typedef ‘List’
  130 |     while (adj->current) {
      |               ^~
sudoku.c:131:21: error: invalid use of incomplete typedef ‘List’
  131 |       push(pila, adj->current);
      |                     ^~
Compilation failed
1fcd799
Thu 04 May 2023 04:12:26 AM UTC: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:131:9: error: expected expression before ‘Node’
  131 |         Node *temp = first(adj);
      |         ^~~~
sudoku.c:133:9: error: expected expression before ‘Node’
  133 |         Node *temp = next(adj);
      |         ^~~~
sudoku.c:134:18: error: ‘temp’ undeclared (first use in this function)
  134 |       push(pila, temp);
      |                  ^~~~
sudoku.c:134:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
87f99a9
Thu 04 May 2023 04:13:23 AM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
377ba6c
Thu 04 May 2023 04:14:42 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:136:17: error: expected ‘;’ before ‘}’ token
  136 |       free(temp)
      |                 ^
      |                 ;
  137 |     }
      |     ~            
Compilation failed
45f596c
Thu 04 May 2023 04:14:46 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
92130d3
Thu 04 May 2023 04:15:06 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
cbb8393
Thu 04 May 2023 04:16:18 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|0
total_score: 70/70
a93b921
Thu 04 May 2023 04:16:51 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
cea2443
